Ros2_workspace/log/build_2022-05-11_08-43-14/got_coffe/stderr.log
  File "/home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/nn_pub.py", line 100
    ! echo 378 > /sys/class/gpio/export
    ^
SyntaxError: invalid syntax

